--- a/processes/02_data-formatting/05_data-cleaning.html
+++ b/processes/02_data-formatting/05_data-cleaning.html
@@ -363,7 +363,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <span id="cb10-29"><a href="#cb10-29" aria-hidden="true" tabindex="-1"></a>census_table <span class="ot">&lt;-</span> <span class="fu">modify_census_tibbles</span>(</span>
 <span id="cb10-30"><a href="#cb10-30" aria-hidden="true" tabindex="-1"></a>  census_table,</span>
 <span id="cb10-31"><a href="#cb10-31" aria-hidden="true" tabindex="-1"></a>  <span class="at">modify_func =</span> select,</span>
-<span id="cb10-32"><a href="#cb10-32" aria-hidden="true" tabindex="-1"></a>  <span class="sc">-</span><span class="fu">c</span>(male_persons, female_persons),</span>
+<span id="cb10-32"><a href="#cb10-32" aria-hidden="true" tabindex="-1"></a>  <span class="sc">-</span><span class="fu">any_of</span>(<span class="fu">c</span>(<span class="st">"male_persons"</span>, <span class="st">"female_persons"</span>, <span class="st">"males"</span>, <span class="st">"females"</span>)),</span>
 <span id="cb10-33"><a href="#cb10-33" aria-hidden="true" tabindex="-1"></a>  <span class="at">stats =</span> <span class="st">"pop"</span></span>
 <span id="cb10-34"><a href="#cb10-34" aria-hidden="true" tabindex="-1"></a>)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
